# tauspec_pkg

./: .gitignore  CHANGELOG.md  INDEX.md  MIGRATION.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py  tutorial.ipynb
tauspec/: __init__.py  calculator.py  config.py  cosmology.py  reionization.py
tests/: __init__.py  compare_performance.py  test_config.py  test_quick.py
