[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tauspec"
version = "0.2.0"
description = "Calculate optical depth power spectra during reionization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Anirban Roy"}
]
keywords = ["cosmology", "reionization", "power-spectrum", "astronomy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "astropy>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/anirbancosmo/tauspec_pkg"
Documentation = "https://github.com/anirbancosmo/tauspec_pkg"
Repository = "https://github.com/anirbancosmo/tauspec_pkg"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
